--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -10,8 +10,8 @@
 
 .acordeon.open,
 .acordeon:hover {
-   background-color: #55569e;
-   border-color: #55569e;
+   background-color: #3A4435;
+   border-color: #3A4435;
 }
 
 .acordeon .trigger {
