--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,7 +2,7 @@ footer {
    width: 100%;
    display: flex;
    flex-direction: row;
-   justify-content: flex-end;
+   justify-content: center;
    align-items: center;
    padding: 1rem;
 }
